[package]
name = "glass-easel-stylesheet-compiler"
version = "0.19.0"
authors = ["LastLeaf <bqfu@163.com>"]
description = "The stylesheet compiler of the glass-easel project."
license = "MIT"
documentation = "https://github.com/wechat-miniprogram/glass-easel"
repository = "https://github.com/wechat-miniprogram/glass-easel"
homepage = "https://github.com/wechat-miniprogram/glass-easel"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "glass-easel-stylesheet-compiler"
path = "src/main.rs"

[features]
default = ["js_bindings"]
js_bindings = []

[dependencies]
cssparser = "0.34"
sourcemap = "6"
serde = "1"
serde_json = "1"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
js-sys = "0.3"
log = "0.4"
console_log = "0.2"
env_logger = "0.9"
clap = { version = "4", features = ["derive"] }
urlencoding = "2"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
