[package]
name = "glass-easel-template-compiler"
version = "0.5.1"
authors = ["LastLeaf <bqfu@163.com>"]
description = "The template compiler of the glass-easel project."
license = "MIT"
documentation = "https://github.com/wechat-miniprogram/glass-easel"
repository = "https://github.com/wechat-miniprogram/glass-easel"
homepage = "https://github.com/wechat-miniprogram/glass-easel"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]

[[bin]]
name = "glass-easel-template-compiler"
path = "src/main.rs"

[features]
default = ["js_bindings", "c_bindings"]
js_bindings = []
c_bindings = ["cbindgen"]

[dependencies]
pest = "2"
pest_derive = "2"
entities = "1"
lazy_static = "1"
regex = "1"
serde = "1"
serde_json = "1"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2.79"
js-sys = "0.3"
log = "0.4"
console_log = "0.2"
env_logger = "0.9"
clap = "2"
cbindgen = { version = "0.21", optional = true }
compact_str = "0.7"
sourcemap = "7.0.1"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
